# Agentic-AI

./: .gitignore
01_GPT/01-Hello World/: Basic.ipynb
01_GPT/02_Multiple_Roles/: Multiple_Rules.ipynb
01_GPT/03_Streaming_Resonse/: streaming_response.ipynb
01_GPT/04_json_mode/: json_mode.ipynb
01_GPT/05_function_calling/: 05_function_calling.ipynb  05_function_calling_project.ipynb
01_GPT/06_Assitances_code_Interpreter/: 06_Assistances_code_interpreter.ipynb
01_GPT/07_Assistance_Knowledge_Retrevel/: 07_Assistance_Knowlege_Retreiver.ipynb
01_GPT/08_Assistant_Function_Calling/: 08_Assistant_Function_Calling.ipynb  08_Assitant_Function_Calling_With_Streaming.ipynb
01_GPT/11_fine_tuning/: code.ipynb
02_UI_STREAMLIT/01HelloWorld/: hello.py
02_UI_STREAMLIT/02_magic/: magic.py
02_UI_STREAMLIT/03_Basics/: Basics.py
02_UI_STREAMLIT/04_bmi_caulculator_project/: BMI.PY
02_UI_STREAMLIT/04_multipage_apps/: multipage.py
02_UI_STREAMLIT/07_chat_elements/: chat_input.py
02_UI_STREAMLIT/12_chat_app_project/: Basic.py  Chatbot_gui.py  Chatgpt_clone.py
02_UI_STREAMLIT/13_openai_assistants_project/: .env  main.py  readme.md
03_Google_Gemini/: .env  HelloWorld.ipynb
04_streamlit_genai_projects/: secrets.toml
06_everything_is_an_api/01_requests/: Requests.ipynb
08_Crew AI/: .gitignore  02_Customer_Support_Automotion.ipynb  03_Tools_for_customer_outrage_camp.ipynb  fake_resume.md  requirements.txt
08_Crew AI/01_uv/02 LiteLLM/01_Litellm_uv/: pyproject.toml
08_Crew AI/01_uv/02 LiteLLM/01_Litellm_uv/src/01_litellm_uv/: __init__.py  hello.py
08_Crew AI/02_Crewai_flow/: pyproject.toml
08_Crew AI/02_Crewai_flow/src/02_crewai_flow/: __init__.py  main.py
08_Crew AI/03_crew/projectcrew/: pyproject.toml
08_Crew AI/03_crew/projectcrew/src/projectcrew/: __init__.py  main.py
12 Openai agentic SDK/xx_project/01_multiagents/multiagents/: pyproject.toml
12 Openai agentic SDK/xx_project/01_multiagents/multiagents/src/multiagents/: __init__.py  main.py
Crew AI/: 01_Bloging.ipynb  readme.md
Langchain/: readme.md
(+76 files in other folders)
