[project]
name = "01-litellm-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maimuzamilhu", email = "muzamilkhalid808@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.61.13",
]

[project.scripts]
01-litellm-uv = "01_litellm_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
